solved linter issues

--- a/homeworks/vladyslav.kovalov_kovalov/2-dom/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/2-dom/styles.css
@@ -1,6 +1,6 @@
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -8,7 +8,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #45aaf2;
+  background-color: #45AAF2;
 }
 
 .container {
@@ -16,6 +16,7 @@ body {
   margin: 0 auto;
   padding: 1rem;
   height: 100vh;
+  position: relative;
 }
 
 .chat {
@@ -23,14 +24,14 @@ body {
   display: flex;
   flex-direction: column;
   border-radius: 5px;
-  background-color: #fff;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: #FFF;
+  box-shadow: rgba(107, 69, 69, .2) 0 2px 8px 0;
 }
 
 .chat__body {
   flex: 100%;
   display: flex;
-  padding: 1rem 1rem 0 1rem;
+  padding: 1rem 1rem 0;
   flex-direction: column-reverse;
   overflow-y: scroll;
 }
@@ -49,8 +50,8 @@ body {
 }
 
 .message {
-  background-color: #daeefc;
-  border-radius: 5px 5px 0 5px;
+  background-color: #DAEEFC;
+  border-radius: 5px 5px 0;
   padding: 1rem;
   position: relative;
   overflow-wrap: anywhere;
@@ -59,26 +60,20 @@ body {
 
 .message:last-of-type {
   animation-name: slideIn;
-  animation-duration: 0.5s;
+  animation-duration: .5s;
   animation-timing-function: ease-in-out;
   margin-bottom: 0;
 }
 
 @keyframes slideIn {
+
   from {
     right: -100px;
   }
+
   to {
     right: 10px;
   }
-}
-
-.message:hover > .message__button {
-  visibility: visible;
-}
-
-.message__text {
-  margin-right: 0.75rem;
 }
 
 .message__button {
@@ -90,13 +85,21 @@ body {
   position: absolute;
 }
 
+.message:hover > .message__button {
+  visibility: visible;
+}
+
+.message__text {
+  margin-right: .75rem;
+}
+
 .message__icon {
-  font-size: 0.75rem;
-  color: #45aaf2;
+  font-size: .75rem;
+  color: #45AAF2;
 }
 
 .chat__footer {
-  border: 1px solid #a5b1c2;
+  border: 1px solid #A5B1C2;
   margin: 1rem;
 }
 
@@ -107,7 +110,7 @@ body {
 .message-form__input {
   flex: 1;
   font-size: 1rem;
-  padding: 0 0.5rem;
+  padding: 0 .5rem;
   border: 0;
   outline: none;
 }
@@ -118,21 +121,21 @@ body {
   padding: 1rem;
 }
 
-.message-form__button:hover > .message-form__icon {
-  color: #45aaf2;
-  transition: color 0.5s ease-in-out;
+.message-form__icon {
+  color: #A5B1C2;
 }
 
-.message-form__icon {
-  color: #a5b1c2;
+.message-form__button:hover > .message-form__icon {
+  color: #45AAF2;
+  transition: color .5s ease-in-out;
 }
 
 .button--clear {
   font-size: 1rem;
   align-self: center;
   margin-bottom: 1rem;
-  padding: 0.5rem 0.75rem;
+  padding: .5rem .75rem;
   border: 0;
   background-color: transparent;
-  color: #a5b1c2;
+  color: #A5B1C2;
 }
