--- a/homeworks/andrii.kholodenko_AndriiCold/2-dom/css/style.css
+++ b/homeworks/andrii.kholodenko_AndriiCold/2-dom/css/style.css
@@ -3,8 +3,8 @@ body {
   height: 100%;
   line-height: 1;
   font-size: 16px;
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #FFF;
+  color: #000;
 }
 
 .wrapper {
@@ -13,7 +13,7 @@ body {
   flex-wrap: wrap;
   max-width: 740px;
   margin: 50px auto;
-  border: 5px solid #1d719a;
+  border: 5px solid #1D719A;
   border-radius: 20px;
   box-shadow: 0 0 20px 4px rgba(46, 49, 49, 1);
 }
@@ -31,7 +31,7 @@ body {
   margin-left: auto;
   margin-right: 0;
   text-align: center;
-  border: 5px solid #000000;
+  border: 5px solid #000;
   border-radius: 20px;
   height: max-content;
   box-shadow: 0 0 20px 4px rgba(46, 49, 49, 1);
@@ -48,7 +48,7 @@ body {
 }
 
 .write_message {
-  border: 5px solid #000000;
+  border: 5px solid #000;
   border-radius: 10px;
   flex-basis: 80%;
   box-shadow: 0 0 20px 4px rgba(46, 49, 49, 1);
@@ -58,16 +58,16 @@ body {
   font: inherit;
   text-align: center;
   vertical-align: middle;
-  color: white;
+  color: #FFF;
   background-color: rgb(0, 0, 162);
-  border: 5px solid #000000;
+  border: 5px solid #000;
   border-radius: 20px;
   flex-basis: 20%;
   box-shadow: 0 0 20px 4px rgba(46, 49, 49, 1);
 }
 
 .send:hover {
-  background-color: rgb(23, 23, 255);;
+  background-color: rgb(23, 23, 255);
 }
 
 .send:active {
