Connect js for page and complete basic task for chat

--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/style.css
@@ -55,13 +55,14 @@ body{
 
 .delete__button:hover{
     color: coral;
+    cursor: pointer;
 }
 
 .inputs{
     border-top: 2px solid black;
     width: 100%;
     margin: 0 auto;
-    padding: 40px 60px 40px 60px ;
+    padding: 40px 60px;
 }
 
 .input__text{
