--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/style.css
@@ -6,14 +6,14 @@
 
 a,
 a:hover {
-  color: black;
+  color: #111;
   text-decoration: none;
 }
 
 .chat {
   width: 100%;
   max-width: 1200px;
-  border: 3px solid black;
+  border: 3px solid #111;
   height: 100%;
   min-height: 500px;
   margin: 30px auto;
@@ -23,7 +23,7 @@ a:hover {
   height: 100%;
   width: 100%;
   min-height: 300px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #111;
 }
 
 .messege__item {
@@ -32,7 +32,7 @@ a:hover {
   justify-content: space-between;
   max-width: 900px;
   margin: 20px auto;
-  border: 1.5px solid black;
+  border: 1.5px solid #111;
   border-radius: 20px;
   padding: 10px 20px;
 }
@@ -43,11 +43,11 @@ a:hover {
 
 .delete__button {
   font-size: 25px;
-  transition: color 0.1s linear;
+  transition: color .1s linear;
 }
 
 .delete__button:hover {
-  color: coral;
+  color: rgb(182, 74, 74);
   cursor: pointer;
 }
 
@@ -59,18 +59,18 @@ a:hover {
 .input__text {
   height: 50px;
   width: 150px;
-  border: 1px solid black;
+  border: 1px solid #111;
   margin: 0 40px 0 0;
   border-radius: 20px;
   transition: all .1s linear;
 }
 
 .input__text:focus {
-  background: coral;
+  background: rgb(182, 74, 74);
 }
 
 .input__button {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
   line-height: 1.5;
   font-size: 20px;
   height: 40px;
