--- a/homeworks/volodymyr.khrushch_Vladimior/2-dom/css/style.css
+++ b/homeworks/volodymyr.khrushch_Vladimior/2-dom/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #Fef6e4;
+  background-color: #FeF6E4;
 }
 
 .content {
@@ -39,7 +39,7 @@ body {
   padding: 15px;
   list-style: none;
   border-radius: 25px;
-  background-color: #F3d2c1;
+  background-color: #F3D2C1;
   -webkit-box-shadow: 23px 19px 25px -15px rgba(0, 0, 0, 0.29);
   -moz-box-shadow: 23px 19px 25px -15px rgba(0, 0, 0, 0.29);
   box-shadow: 23px 19px 25px -15px rgba(0, 0, 0, 0.29);
@@ -55,7 +55,7 @@ body {
   width: 90px;
   border: 3px solid rgba(120, 212, 255, 0.548);
   border-radius: 5px;
-  background-color: #F3d2c1;
+  background-color: #F3D2C1;
 }
 
 .inputMessage {
@@ -66,7 +66,7 @@ body {
 }
 
 .addBtn:hover {
-  background-color: #F582ae;
+  background-color: #F582AE;
   -webkit-box-shadow: 23px 19px 25px -15px rgba(0, 0, 0, 0.29);
   -moz-box-shadow: 23px 19px 25px -15px rgba(0, 0, 0, 0.29);
   box-shadow: 23px 19px 25px -15px rgba(0, 0, 0, 0.29);
