rewrite element according to bem

--- a/homeworks/vladyslav.kovalov_kovalov/2-dom/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/2-dom/styles.css
@@ -85,7 +85,7 @@ body {
   position: absolute;
 }
 
-.message:hover > .message__button {
+.message:hover  .message__button {
   visibility: visible;
 }
 
