rewrite element according to bem

--- a/homeworks/vladyslav.kovalov_kovalov/2-dom/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/2-dom/styles.css
@@ -125,7 +125,7 @@ body {
   color: #A5B1C2;
 }
 
-.message-form__button:hover > .message-form__icon {
+.message-form__button:hover  .message-form__icon {
   color: #45AAF2;
   transition: color .5s ease-in-out;
 }
