--- a/homeworks/andrii.kholodenko_AndriiCold/2-dom/css/style.css
+++ b/homeworks/andrii.kholodenko_AndriiCold/2-dom/css/style.css
@@ -7,7 +7,7 @@ body {
   color: #000;
 }
 
-.wrapper {
+.main_wrapper {
   min-height: auto;
   display: flex;
   flex-wrap: wrap;
@@ -18,7 +18,7 @@ body {
   box-shadow: 0 0 20px 4px rgba(46, 49, 49, 1);
 }
 
-.message {
+.modal_wrapper {
   display: flex;
   flex-direction: column-reverse;
   min-width: 100%;
@@ -26,7 +26,7 @@ body {
   overflow: auto;
 }
 
-.text {
+.text-container {
   max-width: 80%;
   margin-left: auto;
   margin-right: 0;
@@ -38,7 +38,7 @@ body {
   margin-bottom: 10px;
 }
 
-.content {
+.text {
   margin: 10px;
 }
 
@@ -47,14 +47,15 @@ body {
   display: flex;
 }
 
-.write_message {
+.written_text {
+  height: 30px;
   border: 5px solid #000;
   border-radius: 10px;
   flex-basis: 80%;
   box-shadow: 0 0 20px 4px rgba(46, 49, 49, 1);
 }
 
-.send {
+.button_send {
   font: inherit;
   text-align: center;
   vertical-align: middle;
@@ -66,11 +67,11 @@ body {
   box-shadow: 0 0 20px 4px rgba(46, 49, 49, 1);
 }
 
-.send:hover {
+.button_send:hover {
   background-color: rgb(23, 23, 255);
 }
 
-.send:active {
+.button_send:active {
   background-color: rgb(0, 0, 162);
 }
 
