--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/style.css
@@ -15,12 +15,14 @@ a:hover {
   max-width: 1200px;
   border: 3px solid #111;
   height: 100%;
-  min-height: 500px;
+  max-height: 500px;
   margin: 30px auto;
 }
 
-.messeges {
+.chat__messeges {
+  overflow: auto;
   height: 100%;
+  max-height: 380px;
   width: 100%;
   min-height: 300px;
   border-bottom: 2px solid #111;
@@ -37,43 +39,39 @@ a:hover {
   padding: 10px 20px;
 }
 
-.messege__text {
+.item__text {
   font-size: 20px;
 }
 
-.delete__button {
+.item__delete {
   font-size: 25px;
   transition: color .1s linear;
 }
 
-.delete__button:hover {
+.item__delete:hover {
   color: rgb(182, 74, 74);
   cursor: pointer;
 }
 
-.inputs {
+.chat__input {
   width: 100%;
   padding: 40px 60px;
 }
 
 .input__text {
   padding: 5px;
-  height: 50px;
-  width: 150px;
   border: 1px solid #111;
   margin: 0 40px 0 0;
-  border-radius: 20px;
   transition: all .1s linear;
 }
 
 .input__text:focus {
-  background: rgb(182, 74, 74);
+  background: #ff1;
 }
 
 .input__button {
-  margin: 20px 0 0;
-  line-height: 1.5;
+  line-height: 1;
   font-size: 20px;
-  height: 40px;
-  width: 100px;
+  height: 25px;
+  width: 80px;
 }
