fixed bugs in css and js files v1 homework2

--- a/homeworks/leonid.lushchiy_deadhar90/2-dom/css/general.css
+++ b/homeworks/leonid.lushchiy_deadhar90/2-dom/css/general.css
@@ -110,6 +110,6 @@ body, .main {
 	[data-userName], [data-lable] button, [data-lable] textarea {
 		outline: none;
 		border: none;
-		font-family: san-serif, Arial;
+		font-family: sans-serif, Arial;
 	}
 	
