--- a/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/style.css
+++ b/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/style.css
@@ -1,99 +1,95 @@
 html, body {
-    margin: 0;
-    height: 100%;
-    background-color: rgb(91, 119, 118);
-    font-family: 'Oswald', sans-serif;
+  margin: 0;
+  height: 100%;
+  background-color: rgb(91, 119, 118);
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 .message-wrapper {
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .add-message-wrapper {
-    display: flex;
-    width: 500px;
-    min-height: 40px;
-    align-items: center;
-    background-color: darkgreen;
-    border-radius: 5px;
-    padding: 10px;
-    margin: auto;
+  display: flex;
+  width: 500px;
+  min-height: 40px;
+  align-items: center;
+  background-color: rgb(6, 92, 6);
+  border-radius: 5px;
+  padding: 10px;
+  margin: auto;
 }
 
 .input-wrapper {
-    width: 80%;
+  width: 80%;
 }
+
 .input-wrapper input {
-    width: 100%;
-    height: 25px;
+  width: 100%;
+  height: 25px;
 }
 
 .button-wrapper {
-    width: 20%;
-    display: flex;
-    justify-content: flex-end;
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
 }
 
-#add-message-btn {
-    width: 100%;
-    background-color: darkkhaki;
-    color: #221472;
-    outline: none;
-    border: none;
-    height: 25px;
-    cursor: pointer;
-    margin-left: 25px;
+.add-message-btn {
+  width: 100%;
+  background-color: rgb(189, 183, 107);
+  color: #221472;
+  outline: none;
+  border: none;
+  height: 25px;
+  cursor: pointer;
+  margin-left: 25px;
 }
 
 .message-item {
-    display: flex;
-    width: 500px;
-    min-height: 30px;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin-bottom: 15px;
-    padding: 10px;
-    background-color: orange;
-    margin: auto;
-}
-
-.message-item.delition {
-    animation: opacity 1s ease-in-out;
+  display: flex;
+  width: 500px;
+  min-height: 30px;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  margin-bottom: 15px;
+  padding: 10px;
+  background-color: rgb(228, 151, 9);
+  margin: auto;
 }
 
 .description {
-    width: 80%;
-    display: flex;
-    align-items: center;
-    color: rgb(30, 19, 92);
+  width: 80%;
+  display: flex;
+  align-items: center;
+  color: rgb(30, 19, 92);
 }
 
 .buttons {
-    width: 200px;
-    display: flex;
-    align-items: center;
-    flex-direction: unset;
-    justify-content: flex-end;
-    margin-left: 20mm;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  flex-direction: unset;
+  justify-content: flex-end;
+  margin-left: 20px;
 }
 
 .buttons input {
-    width: 15px;
-    height: 20px;
-    cursor: pointer;
+  width: 15px;
+  height: 20px;
+  cursor: pointer;
 }
 
 .buttons button {
-    outline: none;
-    cursor: pointer;
-    height: 25px;
-    border-radius: 50px;
+  outline: none;
+  cursor: pointer;
+  height: 25px;
+  border-radius: 50px;
 }
