--- a/homeworks/roman.buzukov_BuzRom/2-dom/css/style.css
+++ b/homeworks/roman.buzukov_BuzRom/2-dom/css/style.css
@@ -2,15 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
-}
-
-*:active,
-*:focus {
-  outline: none;
 }
 
 body {
+  font-family: sans-serif;
   min-height: 100vh;
   background-color: #000;
   background-image: linear-gradient(315deg, #0E0E0E 0%, #2A2A2A 40%, #3D3C3C 70%, #58545C 94%);
@@ -44,7 +39,7 @@ body {
   background: linear-gradient(rgb(231, 235, 177), rgb(119, 149, 204));
 }
 
-.content__message {
+.content__item {
   width: 80%;
   min-height: 70px;
   padding: 15px;
@@ -56,7 +51,7 @@ body {
   font-size: 24px;
 }
 
-.content__delete {
+.content__item-delete {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -65,7 +60,16 @@ body {
   cursor: pointer;
 }
 
-.form {
+.content__item-text {
+  white-space: pre-line;
+}
+
+.content__item-text span {
+  font-size: 50px;
+  cursor: pointer;
+}
+
+.content__form {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -73,7 +77,7 @@ body {
   background: linear-gradient(45deg, rgb(119, 149, 204) 1%, rgb(215, 227, 240));
 }
 
-.textarea {
+.content__form-textarea {
   display: block;
   width: 70%;
   height: 80px;
@@ -87,7 +91,11 @@ body {
   cursor: pointer;
 }
 
-.submit {
+.content__form-textarea:focus {
+  outline: none;
+}
+
+.content__form-submit {
   padding: 20px 50px;
   border: none;
   border-radius: 5px;
@@ -98,11 +106,11 @@ body {
   transition: .3s ease-in;
 }
 
-.submit:hover {
+.content__form-submit:hover {
   background: rgb(46, 143, 59);
   transform: scale(1.02);
 }
 
-.submit:active {
+.content__form-submit:active {
   transform: scale(1);
 }
