--- a/homeworks/igor.doroshenko_igordordev/2-dom/style.css
+++ b/homeworks/igor.doroshenko_igordordev/2-dom/style.css
@@ -4,7 +4,7 @@
   padding-top: 20px;
   width: 100%;
   max-width: 1000px;
-  background-color:#f5f5f5;
+  background-color: #F5F5F5;
   text-align: center;
 }
 
@@ -20,14 +20,14 @@
   margin: 5px;
   margin-bottom: 10px;
   min-height: 40px;
-  background-color: #fff;
+  background-color: #FFF;
   list-style-type: none;
-  border: 1px solid #a9a9a9;
+  border: 1px solid #A9A9A9;
   border-radius: 10px;
 }
 
 .input-form {
-  border-top: 3px solid #dcdcdc;
+  border-top: 3px solid #DCDCDC;
   display: flex;
   margin-left: auto;
   margin-right: auto;
