--- a/homeworks/roman.buzukov_BuzRom/2-dom/css/style.css
+++ b/homeworks/roman.buzukov_BuzRom/2-dom/css/style.css
@@ -13,7 +13,6 @@ body {
 
 .container {
   max-width: 1200px;
-  width: 70%;
   height: 100vh;
   margin: 0 auto;
   display: flex;
@@ -24,7 +23,7 @@ body {
 .content {
   display: grid;
   grid-template-rows: 1fr 150px;
-  width: 60%;
+  width: 700px;
   height: 700px;
   margin: 0 auto;
   border-radius: 15px;
@@ -39,7 +38,7 @@ body {
   background: linear-gradient(rgb(231, 235, 177), rgb(119, 149, 204));
 }
 
-.content__item {
+.message {
   width: 80%;
   min-height: 70px;
   padding: 15px;
@@ -51,7 +50,7 @@ body {
   font-size: 24px;
 }
 
-.content__item-delete {
+.message__delete {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -60,16 +59,16 @@ body {
   cursor: pointer;
 }
 
-.content__item-text {
+.message__text {
   white-space: pre-line;
 }
 
-.content__item-text span {
+.message__text span {
   font-size: 50px;
   cursor: pointer;
 }
 
-.content__form {
+.form {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -77,7 +76,7 @@ body {
   background: linear-gradient(45deg, rgb(119, 149, 204) 1%, rgb(215, 227, 240));
 }
 
-.content__form-textarea {
+.form__textarea {
   display: block;
   width: 70%;
   height: 80px;
@@ -91,11 +90,11 @@ body {
   cursor: pointer;
 }
 
-.content__form-textarea:focus {
+.form__textarea:focus {
   outline: none;
 }
 
-.content__form-submit {
+.form__submit {
   padding: 20px 50px;
   border: none;
   border-radius: 5px;
@@ -106,11 +105,11 @@ body {
   transition: .3s ease-in;
 }
 
-.content__form-submit:hover {
+.form__submit:hover {
   background: rgb(46, 143, 59);
   transform: scale(1.02);
 }
 
-.content__form-submit:active {
+.form__submit:active {
   transform: scale(1);
 }
