New branch 2-dom

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
@@ -40,7 +40,7 @@ main, .divMessages, .btnSend, .msg {
   border-radius: 4px;
 }
 
-.msg {
+.messageBox {
   position: relative;
   margin: 10px;
   padding: 10px;
