--- a/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/style.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/style.css
@@ -6,7 +6,7 @@ h1 {
     color: rgb(21, 99, 14);
     text-align:center;
 }
-.chatBody {
+.chat__body {
     width: 100%;
     height: 400px;
     border: 3px solid black;
@@ -14,7 +14,7 @@ h1 {
     background: blanchedalmond;
     overflow-y: scroll;
 }
-.chatMessage {
+.chat__message {
     border: 1px solid black;
     border-radius: 5px;
     height: 50px;
