--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
@@ -15,7 +15,7 @@ main {
   height: 500px;
 }
 
-main, .divMessages, .btnSend, .msg {
+main, .divMessages, .btnSend, .messageBox {
   border: 2px solid #000;
 }
 
