--- a/homeworks/Aleksandr.Turuta_turuta7/2-dom/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/2-dom/style.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
 }
 
-.main__window {
+.main__container {
   padding: 10px;
   height: 450px;
   background: #FFF;
@@ -14,7 +14,7 @@
   overflow-y: scroll;
 }
 
-.main__message {
+.main__control {
   margin-top: 10px;
   margin-bottom: 10px;
   display: flex;
@@ -37,17 +37,18 @@
   transform: scale(1.2);
 }
 
-.main__textarea {
-  width: 140px;
+.main__text {
+  min-width: 140px;
+  min-height: 50px;
 }
 
-.template__text {
+.message__text {
   white-space: pre-wrap;
   word-wrap: break-word;
   width: 85%;
 }
 
-.template__message {
+.message {
   height: auto;
   margin: 10px auto 0;
   background: #C0E2EE;
@@ -59,7 +60,7 @@
   justify-content: space-between;
 }
 
-.template__button-delete {
+.message__button-delete {
   margin-bottom: 10px;
   width: 25px;
   height: 25px;
