--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/style.css
@@ -8,6 +8,7 @@
 }
 
 .main-box_msg {
+  position: relative;
   width: 500px;
   margin: 30px auto;
   padding: 10px 30px 30px;
@@ -18,8 +19,9 @@
 }
 
 .main-box_msg::before {
-  position: relative;
-  left: 500px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   display: block;
   content: "\00d7";
   width: 15px;
