--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/style.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/2-dom/style.css
@@ -18,18 +18,18 @@
   font: 20px Arial, sans-serif;
 }
 
-.main-box_msg::before {
+.main-box_msg .close {
   position: absolute;
   top: 10px;
   right: 10px;
   display: block;
-  content: "\00d7";
   width: 15px;
   height: 15px;
   border: 2px solid #000;
   border-radius: 15px;
   font: 25px Arial, sans-serif;
   line-height: 15px;
+  cursor: pointer;
 }
 
 .new-msg-form {
