--- a/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/style.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/style.css
@@ -1,26 +1,29 @@
 body {
-    background-color: antiquewhite;
+  background-color: #C2C286;
 }
+
 h1 {
-    font-size: 60px;
-    color: rgb(21, 99, 14);
-    text-align:center;
+  font-size: 60px;
+  color: #15630E;
+  text-align: center;
 }
+
 .chat__body {
-    width: 100%;
-    height: 400px;
-    border: 3px solid black;
-    margin-bottom: 30px;
-    background: blanchedalmond;
-    overflow-y: scroll;
+  width: 100%;
+  height: 400px;
+  border: 3px solid black;
+  margin-bottom: 30px;
+  background: #CC9E5A;
+  overflow-y: scroll;
 }
+
 .chat__message {
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 50px;
-    margin-left: 10px;
-    margin-bottom: 5px;
-    background-color: rgb(238, 255, 0);
-    vertical-align: middle;
-    font-size: 30px;
+  border: 1px solid black;
+  border-radius: 5px;
+  height: 50px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  background-color: #EEFF00;
+  vertical-align: middle;
+  font-size: 30px;
 }
