--- a/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/style.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/style.css
@@ -11,14 +11,14 @@ h1 {
 .chat__body {
   width: 100%;
   height: 400px;
-  border: 3px solid black;
+  border: 3px solid #000000;
   margin-bottom: 30px;
   background: #CC9E5A;
   overflow-y: scroll;
 }
 
 .chat__message {
-  border: 1px solid black;
+  border: 1px solid #000000;
   border-radius: 5px;
   height: 50px;
   margin-left: 10px;
