--- a/homeworks/maksym.selenkov_MaksymSelenkov/2-dom/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/2-dom/style.css
@@ -5,6 +5,7 @@
   height: 500px;
   border-radius: 5px;
   padding: 10px 0;
+  overflow: scroll;
 }
 
 .bottom-area {
@@ -16,14 +17,14 @@
 }
 
 .button-submit {
-  background-color: #435599;
+  background-color: #C0B4B8;
   height: 40px;
   margin: 0 auto;
   border-radius: 5px;
 }
 
 .bottom-input {
-  background-color: #435599;
+  background-color: #C0B4B8;
   width: 300px;
   height: 40px;
   border-radius: 5px;
@@ -32,7 +33,7 @@
 
 .message-style {
   color: #202044;
-  background-color: #7F887F;
+  background-color: #C0B4B8;
   border-radius: 5px;
   margin: 10px;
 }
