Сorrection of comments

--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/style.css
@@ -27,7 +27,7 @@
   width: auto;
   margin: 20px;
   color: rgb(0, 0, 0);
-  background-color: #9ACD32;
+  background-color: rgb(154, 205, 50);
   overflow: hidden;
   overflow-wrap: break-word;
   border: solid 1px rgb(128, 128, 128);
