--- a/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/style.css
+++ b/homeworks/yurii.petrenko_YuriiPetrenko1907/2-dom/style.css
@@ -8,7 +8,7 @@ h1 {
   text-align: center;
 }
 
-.message-wrapper {
+.message-chat {
   display: flex;
   flex-flow: column;
   justify-content: center;
@@ -16,7 +16,7 @@ h1 {
   width: 100%;
 }
 
-.add-message-wrapper {
+.add-message-chat {
   display: flex;
   width: 500px;
   min-height: 40px;
@@ -27,11 +27,11 @@ h1 {
   margin: auto;
 }
 
-.input-wrapper {
+.input-text {
   width: 80%;
 }
 
-.input-wrapper input {
+.input-text input {
   width: 100%;
   height: 25px;
 }
