--- a/homeworks/nikolay.krasniuk_Kingstar22/2-dom/style.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/2-dom/style.css
@@ -15,7 +15,7 @@ body {
   justify-content: center;
 }
 
-.wrapper {
+.chat__main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,7 +35,7 @@ body {
   border-bottom: 3px solid #0A166E;
 }
 
-.chat__send-menu {
+.chat_form {
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -61,6 +61,7 @@ body {
   background: #4764BB;
   color: #FFF;
   font-size: 25px;
+  cursor: pointer;
 }
 
 .template__new-message {
@@ -73,7 +74,7 @@ body {
   padding: 10px;
   margin-top: 10px;
   width: 85%;
-  height: 50px;
+  min-height: 50px;
 }
 
 .template__message-text {
@@ -86,4 +87,6 @@ body {
   border-radius: 50%;
   outline: none;
   border: none;
+  cursor: pointer;
 }
+
