--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/style.css
@@ -8,24 +8,24 @@
 
 .main {
   display: block;
-  height: 600px;
-  width: auto;
+  height: 75%;
+  width: 100%;
   overflow: auto;
   background-image: url("cat_space.jpg");
 }
 
 .footer {
   display: block;
-  height: 200px;
-  width: 500px;
+  height: 25%;
+  width: 100%;
   background-color: rgb(245, 245, 245);
 }
 
 .message {
   display: block;
-  height: 100;
+  height: auto;
   width: auto;
-  margin: 20px;
+  margin-bottom: 10px;
   color: rgb(0, 0, 0);
   background-color: rgb(154, 205, 50);
   overflow: hidden;
@@ -33,15 +33,15 @@
   border: solid 1px rgb(128, 128, 128);
   border-radius: 10px;
   text-align: left;
-  padding: 5px;
+  padding-left: 10px;
   font-size: 20px;
 }
 
 .input {
   display: inline-block;
-  margin: 5px;
-  height: 50px;
-  width: 373px;
+  margin-left: 5px;
+  height: 100%;
+  width: 100%;
   text-align: left;
   background-color: rgb(245, 245, 245);
   border: none;
@@ -52,14 +52,27 @@
 
 .send {
   display: inline-block;
-  margin: 5px 5px 5px 0;
-  height: 56px;
-  width: 100px;
+  margin-left: 5px;
+  height: 25%;
+  width: 20%;
   text-align: center;
   background-color: rgb(245, 245, 245);
   border: none;
   color: rgb(0, 0, 0);
   cursor: pointer;
   text-transform: uppercase;
+  font-size: 20px;
+}
+
+.form {
+  display: inline-block;
+  margin-left: 5px;
+  height: 25%;
+  width: 75%;
+  text-align: left;
+  background-color: rgb(245, 245, 245);
+  border: none;
+  cursor: text;
+  font-style: italic;
   font-size: 20px;
 }
