--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 .basis {
+  margin-top: 10px;
   width: 400px;
   height: 500px;
 }
@@ -43,10 +44,10 @@ body {
 }
 
 .message-box {
-  position: relative;
   margin: 10px;
   padding: 10px;
   width: 89%;
   height: auto;
+  background-color: #e8f7e7;
   border-radius: 12px;
 }
