fix code and style

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/style.css
@@ -48,6 +48,6 @@ body {
   padding: 10px;
   width: 89%;
   height: auto;
-  background-color: #e8f7e7;
+  background-color: #E8F7E7;
   border-radius: 12px;
 }
