--- a/homeworks/konstantin.rusenko_ConstantinRusenko/2-dom/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/2-dom/style.css
@@ -11,6 +11,7 @@
   right: 0;
   margin: 0 auto;
   border: 1px solid #000;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .main__message-window {
@@ -40,5 +41,21 @@
 
 .new-message {
   margin-bottom: 5px;
-  color: #00C;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 2px;
+  padding: 4px 8px;
+  display: flex;
+  justify-content: space-between;
+  overflow-x: auto;
+  align-items: center;
+}
+
+.del-button {
+  background: none;
+  border: 1px solid #000;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  padding: 0;
 }
