--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/2-dom/style.css
@@ -1,6 +1,6 @@
 .container {
   display: block;
-  height: 800px;
+  height: 650px;
   width: 500px;
   border: solid 2px rgb(128, 128, 128);
   margin: auto;
@@ -8,7 +8,7 @@
 
 .main {
   display: block;
-  height: 75%;
+  height: 90%;
   width: 100%;
   overflow: auto;
   background-image: url("cat_space.jpg");
@@ -16,7 +16,7 @@
 
 .footer {
   display: block;
-  height: 25%;
+  height: 10%;
   width: 100%;
   background-color: rgb(245, 245, 245);
 }
@@ -41,18 +41,17 @@
   display: inline-block;
   margin-left: 5px;
   height: 100%;
-  width: 100%;
+  width: 70%;
   text-align: left;
   background-color: rgb(245, 245, 245);
   border: none;
   cursor: text;
-  font-style: italic;
   font-size: 20px;
+  padding: 0;
+  font-style: italic;
 }
 
 .send {
-  display: inline-block;
-  margin-left: 5px;
   height: 25%;
   width: 20%;
   text-align: center;
@@ -62,17 +61,12 @@
   cursor: pointer;
   text-transform: uppercase;
   font-size: 20px;
+  font-style: italic;
 }
 
 .form {
   display: inline-block;
-  margin-left: 5px;
-  height: 25%;
-  width: 75%;
-  text-align: left;
+  height: 100%;
+  width: 100%;
   background-color: rgb(245, 245, 245);
-  border: none;
-  cursor: text;
-  font-style: italic;
-  font-size: 20px;
 }
